// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolInputContainerFc should render correctly 1`] = `
<div class="kol-input-container">
  <div class="kol-input-container__container"></div>
</div>
`;

exports[`KolInputContainerFc should render with both startAdornment and endAdornment 1`] = `
<div class="kol-input-container">
  <div class="kol-input-container__adornment kol-input-container__adornment--start">
    <span class="kol-icon" hidelabel="">
      <i aria-hidden="true" class="kol-icon__icon start-icon" part="icon" role="presentation"></i>
    </span>
  </div>
  <div class="kol-input-container__container"></div>
  <div class="kol-input-container__adornment kol-input-container__adornment--end">
    <span class="kol-icon" hidelabel="">
      <i aria-hidden="true" class="end-icon kol-icon__icon" part="icon" role="presentation"></i>
    </span>
  </div>
</div>
`;

exports[`KolInputContainerFc should render with children 1`] = `
<div class="kol-input-container">
  <div class="kol-input-container__container">
    <input type="text">
  </div>
</div>
`;

exports[`KolInputContainerFc should render with endAdornment 1`] = `
<div class="kol-input-container">
  <div class="kol-input-container__adornment kol-input-container__adornment--start"></div>
  <div class="kol-input-container__container"></div>
  <div class="kol-input-container__adornment kol-input-container__adornment--end">
    <span class="kol-icon" hidelabel="">
      <i aria-hidden="true" class="end-icon kol-icon__icon" part="icon" role="presentation"></i>
    </span>
  </div>
</div>
`;

exports[`KolInputContainerFc should render with startAdornment 1`] = `
<div class="kol-input-container">
  <div class="kol-input-container__adornment kol-input-container__adornment--start">
    <span class="kol-icon" hidelabel="">
      <i aria-hidden="true" class="kol-icon__icon start-icon" part="icon" role="presentation"></i>
    </span>
  </div>
  <div class="kol-input-container__container"></div>
  <div class="kol-input-container__adornment kol-input-container__adornment--end"></div>
</div>
`;
